body overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,6 @@ ul {
 
 body {
   max-width: 768px;
-  overflow: hidden;
 }
 
 .footer {
