--- a/scss/Layout/_container.scss
+++ b/scss/Layout/_container.scss
@@ -4,5 +4,4 @@
 
 body{
     max-width: 768px;
-    overflow: hidden;
 }
